# prefixset-rs

./: .gitignore  Cargo.toml  README.md  test.sh
.github/workflows/: cicd.yml
benches/: bench.rs
examples/: ranges.rs  rs-example.rs
prefixset-rs/: Cargo.toml
prefixset-rs/examples/: rs-example.rs
prefixset-rs/src/: lib.rs  tests.rs
prefixset-rs/src/node/: from.rs  gluemap.rs  iter.rs  ops.rs  tests.rs
prefixset-rs/src/set/: iter.rs  ops.rs  tests.rs
prefixset-rs/test_data/: AS-HURRICANE-ipv6-ranges.txt  AS-HURRICANE-ipv6.json  AS-WOLCOMM-ipv6-ranges.txt
prefixset-rs/utils/src/: lib.rs
src/: error.rs  lib.rs  node.rs  prefix.rs  set.rs  tests.rs
src/node/: from.rs  gluemap.rs  iter.rs  mod.rs  ops.rs  ranges.rs  tests.rs  tree.rs
src/prefix/: ipv4.rs  ipv6.rs  mod.rs  range.rs  tests.rs
src/set/: from.rs  iter.rs  mod.rs  ops.rs  tests.rs
test_data/: AS-HURRICANE-ipv4-ranges.txt  AS-WOLCOMM-ipv4-ranges.txt  AS-WOLCOMM-ipv6.json  deagg.py
tests/: hypothesis.rs  integration.rs
utils/: Cargo.toml
utils/src/: lib.rs
