[package]
name = "prefixset"
version = "0.1.0"
authors = ["Ben Maddison <benm@workonline.africa>"]
edition = "2018"

[lib]
bench = false

[dependencies]
ipnet = "^2.3"
num = "^0.4"

[dev-dependencies]
criterion = {version = "^0.3", features = ["html_reports"]}
itertools = "^0.10"
paste = "^1.0"
proptest = "^1.0"
utils = {path = "utils"}

[[bench]]
name = "bench"
harness = false
